[tool.poetry]
name = "pdf-first-page"
version = "0.1.0"
description = "一个用于提取PDF首页的Streamlit应用"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.32.0"
PyPDF2 = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 